--- a/index.html
+++ b/index.html
@@ -120,8 +120,7 @@
 
 
  <div class="water-mark" >
-  <p>programing: By Mohamed Walid</p><br/>
-  <p>01062987642</p>
-</div>
+  <p>By Mohamed Walid</p><br/>
+  
 </body>
 </html>
