--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
        </div>
         <div class="info">
          <h3>Script</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia itaque,
+            <p>Lorem ipsum dolor
                  vel</p>
         </div>
         
