--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 
  <div class="contact-us">
-  <a href="https://api.whatsapp.com/send/?phone=201142385238" class="main-btn">Contact us</a>
+  <a href="https://api.whatsapp.com/send/?phone=201142385238" class="main-btn2">Contact us</a>
 </div>  
 
 
