--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
 <div class="main" id="main">
 <div class="first">
-    <h2>Hello I'm Amr Mostafa<br><span>Biology Teacher</span></h2>
+    <h2>Hello I'm Amr Mostafa<br><span>Biology</span><br>
+      <span> Teacher</span></h2>
     <h3>A path to excellence</h3>
     <a href="#youtube" class="main-btn">Who Mr.amr</a><br>
     <a href="#our work" class="main-btn">View Our work system</a>
