--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 </div>
 
 
-<div class="youtube" id="youtube">
+<div class="youtube" id="our work">
 <div class="youtube title">
-  who mr.amr ?
+  Our work system
 </div>
   
   <iframe width="100%" height="427" src="https://www.youtube.com/embed/F2d477r8gkY" title="answers of 
@@ -51,8 +51,8 @@
 
 
 
-<section class="cards" id="our work">
-<h2 class="title"> Our work system</h2>
+<section class="cards" id="#">
+ 
 <div class="content">
 
 
