--- a/index.html
+++ b/index.html
@@ -105,12 +105,11 @@
 <section class="projects">
  <h2 class="title1"> </h2>
 <div class="content">
-    <div class="project-card ">
-      <div class="project-image">
+    <div >
+      <div >
         <img src="images/6.png"/>
       </div>
       <div class="project-info">
-        <p class="project-category"></p>
         <strong class="project-title">
             <span class="h">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt d
              </span>
