--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h2>Hello I'm Amr Mostafa<br><span>Biology</span><br>
       <span> Teacher</span></h2>
     <h3>A path to excellence</h3>
-    <a href="#youtube" class="main-btn">Who Mr.amr</a><br>
+    <a href="https://us05web.zoom.us/j/3935884423?pwd=OGczN3FEUUJiTVoraHI0aGc5TEFlUT09#success" class="main-btn">Zoom meeting</a><br>
     <a href="#our work" class="main-btn">View Our work system</a>
     
   
@@ -105,12 +105,13 @@
 <section class="projects">
  <h2 class="title1"> </h2>
 <div class="content">
-    <div >
-      <div >
+    <div class="project-card ">
+      <div class="project-image">
         <img src="images/6.png"/>
       </div>
       <div class="project-info">
-        <strong class="project-title">
+        <p class=></p>
+        <strong >
             <span class="h">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt d
              </span>
         </strong>
