--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
         <img src="images/6.png"/>
       </div>
       <div class="project-info">
-        <p class=></p>
-        <strong >
+        <p class="project-category"></p>
+        <strong class="project-title">
             <span class="h">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt d
              </span>
         </strong>
