--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h2>Hello I'm Amr Mostafa<br><span>Biology</span><br>
       <span> Teacher</span></h2>
     <h3>A path to excellence</h3>
-    <a href="https://us05web.zoom.us/j/3935884423?pwd=OGczN3FEUUJiTVoraHI0aGc5TEFlUT09#success" class="main-btn">Zoom meeting</a><br>
+    <a href="#youtube" class="main-btn">Who Mr.amr</a><br>
     <a href="#our work" class="main-btn">View Our work system</a>
     
   
@@ -38,8 +38,8 @@
 </div>
 
 
-<div class="youtube" id="our work">
-<div class="youtube title">
+<div class="youtube" id="youtube">
+<div class="youtube title" class="title">
   Our work system
 </div>
   
@@ -51,8 +51,8 @@
 
 
 
-<section class="cards" id="#">
- 
+<section class="cards" id="our work">
+<h2 class="title"> </h2>
 <div class="content">
 
 
@@ -102,7 +102,7 @@
 
 
 
-<section class="projects">
+<!--section class="projects">
  <h2 class="title1"> </h2>
 <div class="content">
     <div class="project-card ">
@@ -118,7 +118,7 @@
       </div>
     </div>
 </div>
- </section>
+ </section-->
 
 <div class="social-media">
   
