--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h2>Hello I'm Amr Mostafa<br><span>Biology</span><br>
       <span> Teacher</span></h2>
     <h3>A path to excellence</h3>
-    <a href="#youtube" class="main-btn">Who Mr.amr</a><br>
+    <a href="https://us05web.zoom.us/j/3935884423?pwd=OGczN3FEUUJiTVoraHI0aGc5TEFlUT09#success" class="main-btn">join zoom</a><br>
     <a href="#our work" class="main-btn">View Our work system</a>
     
   
