--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <span> Teacher</span></h2>
     <h3>A path to excellence</h3>
     <a href="https://us05web.zoom.us/j/3935884423?pwd=OGczN3FEUUJiTVoraHI0aGc5TEFlUT09#success" class="main-btn">join Zoom</a><br>
-    <a href="#our work" class="main-btn">View Our work system</a>
+    <a href="#youtube" class="main-btn">View Our work system</a>
     
   
 </div>
