--- a/index.html
+++ b/index.html
@@ -1,2 +1,180 @@
-<h1>Under developing</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Orix Store</title>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+<link rel="stylesheet" 
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" 
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" 
+      crossorigin="anonymous">
 
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<!----------------------- Navigation -------------------------->
+
+ <nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary py-3">
+  <div class="container">
+
+    <!-- اللوجو -->
+    <img src="img/logo1.png" alt="">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" 
+            aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
+      <span id="bar" class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent" "
+>
+      <!-- غيرت me-auto إلى ms-auto -->
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0"style="margin-left:auto;"
+>
+       
+        <li class="nav-item">
+          <a class="nav-link" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Shop</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Blog</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact Us</a>
+        </li>
+         <li class="nav-item">
+          <!-- <i class="fa-solid fa-magnifying-glass"></i> -->
+        </li>
+        
+    </div>
+  </div>
+</nav>
+<!----------------------------- END Navigation --------------------------->
+<!----------------------------- Home Section ------------------------------->
+
+<section id="home">
+    <div class="container">
+     <h5>NEW ARRAIVALS</h5>
+     <h1><span>Best Price</span> This Year</h1>
+     <p><big>Orix</big> offers your very comfortable time<br>on walking and exercises.</p>
+    <button>Shop Now</button>
+    </div>
+</section>
+<!-------------------- End Home Section ------------------------------------>
+<!-- --------------------------------------- -->
+ <section id="brand" class="container">
+    <div class="row m-0 py-5">
+        <img class="img-fluid col-lg-2 col-md-4 col-6" src="" alt="">
+        <img class="img-fluid col-lg-2 col-md-4 col-6" src="" alt="">
+        <img class="img-fluid col-lg-2 col-md-4 col-6" src="" alt="">
+        <img class="img-fluid col-lg-2 col-md-4 col-6" src="" alt="">
+        <img class="img-fluid col-lg-2 col-md-4 col-6" src="" alt="">
+        <img class="img-fluid col-lg-2 col-md-4 col-6" src="" alt="">
+    </div>
+ </section>
+ <!-- --------------------------------------- -->
+<!------------------------- Category Section ------------------------------->
+<section id="new" class="w-100">
+    <div class="row p-0 m-0">
+        <div class="one col-lg-4 col-md-12 col-12 p-0">
+            <img class="img-fluid" src="img/new/1.jpg" alt="">
+            <div class="details">
+                <h2>Hoodies</h2>
+                <button class="text-uppercase">Shop now</button>
+            </div>
+        </div>
+        <div class="one col-lg-4 col-md-12 col-12 p-0">
+            <img class="img-fluid" src="img/new/2.jpg" alt="">
+            <div class="details">
+                <h2>Sport Wears</h2>
+                <button class="text-uppercase">Shop now</button>
+            </div>
+        </div>
+        <div class="one col-lg-4 col-md-12 col-12 p-0 ">
+            <img class="img-fluid" src="img/new/3.jpg" alt="">
+            <div class="details">
+                <h2>Coming Soon</h2>
+                <button class="text-uppercase">Shop now</button>
+            </div>
+        </div>
+    </div>
+</section>
+<!-------------------------- END Category Section --------------------------->
+<!-------------------------- Product section -------------------------------->
+<section id="featured" class="my-5 pb-5">
+   <div class="container text-center mt-5 py-5">
+      <h3>Our Featured</h3>
+      <hr class="mx-auto">
+      <p>Here you can check out our new products with fair price on Orix.</p>
+   </div>
+   <div class="row mx-auto container-fluid">
+      <div class="product text-center col-lg-3 col-md-4 col-12">
+        <img class="img-fluid mb-3" src="img/featured/1.jpg " alt="">
+        <div class="star">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+        </div>
+        <h5 class="p-name">Product Name</h5>
+        <h4 class="p-price">ج.م400</h4>
+        <button class="buy-btn">Buy Now</button>
+      </div>
+       <div class="product text-center col-lg-3 col-md-4 col-12">
+        <img class="img-fluid mb-3" src="img/featured/1.jpg " alt="">
+        <div class="star">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+        </div>
+        <h5 class="p-name">Product Name</h5>
+        <h4 class="p-price">ج.م400</h4>
+        <button class="buy-btn">Buy Now</button>
+      </div>
+       <div class="product text-center col-lg-3 col-md-4 col-12">
+        <img class="img-fluid mb-3" src="img/featured/1.jpg " alt="">
+        <div class="star">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+        </div>
+        <h5 class="p-name">Product Name</h5>
+        <h4 class="p-price">ج.م400</h4>
+        <button class="buy-btn">Buy Now</button>
+      </div>
+       <div class="product text-center col-lg-3 col-md-4 col-12">
+        <img class="img-fluid mb-3" src="img/featured/1.jpg " alt="">
+        <div class="star">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+        </div>
+        <h5 class="p-name">Product Name</h5>
+        <h4 class="p-price">ج.م400</h4>
+        <button class="buy-btn">Buy Now</button>
+      </div>
+   </div>
+</section>
+
+
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>
+</body>
+</html>
